New minor version 0.6.0-beta - Robust auto name feature

--- a/factory/02-tree/02-coment[fr].tex
+++ b/factory/02-tree/02-coment[fr].tex
@@ -4,7 +4,8 @@
     \input{../config/header[fr].sty}
     \input{../01-general/01-general.sty}
 
-    \usepackage{01-tree}
+    \usepackage{01-basic}
+    \usepackage{02-coment}
 \makeatother
 
 
