--- a/factory/02-tree/03-frame[fr].tex
+++ b/factory/02-tree/03-frame[fr].tex
@@ -3,7 +3,8 @@
 \makeatletter
     \input{../config/header[fr].sty}
 
-    \usepackage{01-tree}
+    \usepackage{01-basic}
+    \usepackage{03-frame}
 \makeatother
 
 
