--- a/factory/99-major-change-log/01-change-log[fr].tex
+++ b/factory/99-major-change-log/01-change-log[fr].tex
@@ -22,6 +22,22 @@ Tous les changements sont disponibles uniquement en anglais dans le dossier \ver
 % Changes shown - START
 
     \medskip
+    \item[2020-08-08] Nouvelle version mineure \verb+0.6.0-beta+.
+    
+    \begin{itemize}[itemsep=.5em]
+        \item \topic{Arbre de probabilités}
+        \begin{itemize}[itemsep=.5em]
+            \item \macro{aptreeFocus}, \macro{aptreeFocus*} et \macro{aptreeFocus**} permettent d'utiliser le système de nommage automatique des noeuds proposé par \verb#forest#.
+            
+            \item Il en va de même pour \macro{aptreeComment} et \macro{aptreeFrame}.
+        \end{itemize}
+    \end{itemize}
+    
+    
+    \separation
+% ------------------------ %
+
+    \medskip
     \item[2020-08-05] Nouvelle version mineure \verb+0.5.0-beta+.
     
     \begin{itemize}[itemsep=.5em]
