--- a/factory/02-tree/01-basic[fr].tex
+++ b/factory/02-tree/01-basic[fr].tex
@@ -4,7 +4,7 @@
     \input{../config/header[fr].sty}
     \input{../01-general/01-general.sty}
 
-    \usepackage{01-tree}
+    \usepackage{01-basic}
 \makeatother
 
 
@@ -13,24 +13,7 @@
 
 \begin{document}
 
-\section{Arbres pondérés}
-
-\subsection{Au commencement était la forêt...}
-
-Le gros du travail est fait par le package \verb+forest+ qui s'appuie \verb+TikZ+ dont on peut utiliser toute la machinerie afin d'obtenir des choses sympathiques comme ci-dessous et ceci à moindre coût neuronal comme vont le montrer les explications données dans les sections suivantes.
-
-\inputlatexexcodeafter{TikZ/probatree-showcase.tkz}
-
-
-\begin{remark}
-	Jusqu'à la section \ref{tnsproba-autonum-forest} page \pageref{tnsproba-autonum-forest}, nous nommerons à la main les noeuds des arbres via \verb#name = ...# lorsque cela sera nécessaire.
-	Dans la section indiquée nous verrons comment utiliser les noms automatiques donnés par le package \verb#forest#.
-\end{remark}
-
-
-
-% ---------------------- %
-
+%\section{Arbres pondérés}
 
 \subsection{Les bases}
 
