--- a/factory/02-tree/06-tree-technical[fr].tex
+++ b/factory/02-tree/06-tree-technical[fr].tex
@@ -2,8 +2,6 @@
 
 \makeatletter
     \input{../config/header[fr].sty}
-
-    \usepackage{01-tree}
 \makeatother
 
 
@@ -42,7 +40,18 @@
 
 \IDoption{} la couleur au format TikZ. La valeur par défaut est \verb#blue#.
 
-\IDargs{1..3} noms de la sous-racine (à gauche), du noeud final en haut (à droite) et du noeud final en bas (à droite). En fait l'ordre n'est pas important ici.
+\IDargs{1..3} les noms de la sous-racine (à gauche), du noeud final en haut (à droite) et du noeud final en bas (à droite) tous indiqués via \verb#name = ...# \emph{(en fait l'ordre n'est pas important ici)}.
+
+
+\separation
+
+
+\IDmacro{aptreeFrame}{1}{3} \hfill \mwhyprefix{a}{auto}
+
+\extraspace
+\extraspace
+
+Voir les indications précédentes excepté qu'ici on utilise le système de nommage automatisé dérivé de celui de \verb#forest#.
 
 
 \separation
@@ -60,6 +69,17 @@
 \separation
 
 
+\IDmacro{aptreeComment}{1}{2}
+
+\extraspace
+\extraspace
+
+Voir les indications précédentes excepté qu'ici on utilise le système de nommage automatisé dérivé de celui de \verb#forest#.
+
+
+\separation
+
+
 \IDmacro{ptreeFocus  }{1}{1}
 
 \IDmacro{ptreeFocus* }{1}{1}
@@ -68,5 +88,21 @@
 
 \IDoption{} la couleur au format TikZ. La valeur par défaut est \verb#blue#.
 
-\IDarg{} les noms des noeuds dans le bon ordre et séparés par des barres verticales \verb#|#.
+\IDarg{} les noms des noeuds indiqués via \verb#name = ...# à fournir dans le bon ordre et à séparer par des barres verticales \verb#|#.
+
+
+\separation
+
+
+\IDmacro{aptreeFocus  }{1}{1}
+
+\IDmacro{aptreeFocus* }{1}{1}
+
+\IDmacro{aptreeFocus**}{1}{1}
+
+\extraspace
+\extraspace
+
+Voir les indications précédentes excepté qu'ici on utilise le système de nommage automatisé dérivé de celui de \verb#forest#.
+
 \end{document}
