Auto ignore too old changelogs

--- a/factory/03-tree/00-showcase[fr].tex
+++ b/factory/03-tree/00-showcase[fr].tex
@@ -5,6 +5,10 @@
     \input{../01-general/01-general.sty}
 
     \usepackage{01-basic}
+    \usepackage{02-coment}
+    \usepackage{03-frame}
+    \usepackage{04-focus-edge}
+    \usepackage{05-auto-num}
 \makeatother
 
 
