--- a/factory/03-tree/01-basic.sty
+++ b/factory/03-tree/01-basic.sty
@@ -114,6 +114,9 @@
 				\node [draw, ##1, thick, rounded corners,fit to=tree]{};
 			}
 		},
+		%
+% USEFUL - TO KEEP 8
+%
 %		pcomment/.style={
 %		    tikz+={
 %		        \node [anchor=mid west, xshift=.4cm] at (.mid -| pcomment coord) {##1};
