--- a/factory/03-tree/02-coment[fr].tex
+++ b/factory/03-tree/02-coment[fr].tex
@@ -37,6 +37,8 @@ Que ce soit pour expliquer un arbre de probabilité, ou bien pour raisonner sur 
 \end{remark}
 
 
+% ---------------------- %
+
 
 \newparaexample{Coller au plus près}
 
@@ -47,6 +49,15 @@ Avec l'exemple précédent on obtient la mise en forme qui suit.
 
 \input{tikz/probatree-comment-leftmost.tkz}
 
+
+% ---------------------- %
+
+
+\newparaexample{Indiquer les valeurs d'une variable aléatoire}
+
+Les commentaires permettent de faire facilement ce qui suit.
+
+\inputlatexex{tikz/probatree-random-var.tkz}
 \end{document}
 
 
