--- a/factory/03-tree/03-frame[fr].tex
+++ b/factory/03-tree/03-frame[fr].tex
@@ -33,8 +33,11 @@ Dans l'exemple ci-après nous utilisons la bidouille \verb+{},s sep = 1.3cm+ qui
 
 
 \begin{remark}
-	La clé \verb#pframe# est un cas particulier car tous les autres décorations se font en dehors de la définition de l'arbre
+	La clé \verb#pframe# est un cas particulier de décoration car les autres décorations se font en dehors de la définition de l'arbre
 \end{remark}
+%\begin{remark}
+%	La clé \verb#pframe# est l'un des deux cas particuliers de décoration car la majorité des décorations se font en dehors de la définition de l'arbre
+%\end{remark}
 
 
 % ---------------------- %
