--- a/factory/03-tree/05-auto-num.sty
+++ b/factory/03-tree/05-auto-num.sty
@@ -51,7 +51,8 @@
 }
 
 
-% #1 : one node
+% #1 : number of the node
+% #2 : the node
 \newcommand\tnsproba@ptree@focus@auto@abstract@node@nostart[2]{
 	\ifnum#1=1\else
     	\tnsproba@ptree@focus@auto@abstract@node{#1}{#2}
@@ -77,8 +78,9 @@
 
 
 
-% #1 : start of the edge
-% #2 : end   of the edge
+% #1 : number of the couple of nodes
+% #2 : start of the edge
+% #3 : end   of the edge
 \newcommand\tnsproba@ptree@focus@auto@abstract@edge[3]{
     \draw[\tnsproba@ptree@focus@color,
           line cap   = round,
