--- a/tnsproba/tnsproba-doc[fr].tex
+++ b/tnsproba/tnsproba-doc[fr].tex
@@ -28,6 +28,7 @@
     urlcolor=black
 }
 
+\usepackage[numbered]{bookmark}
 \usepackage{amsthm}
 
 \usepackage{tcolorbox}
@@ -502,6 +503,8 @@ Que ce soit pour expliquer un arbre de probabilité, ou bien pour raisonner sur 
 \end{remark}
 
 
+% ---------------------- %
+
 
 \newparaexample{Coller au plus près}
 
@@ -511,6 +514,16 @@ Avec l'exemple précédent on obtient la mise en forme qui suit.
 \medskip
 
 \input{tikz/probatree-comment-leftmost.tkz}
+
+
+% ---------------------- %
+
+
+\newparaexample{Indiquer les valeurs d'une variable aléatoire}
+
+Les commentaires permettent de faire facilement ce qui suit.
+
+\inputlatexex{tikz/probatree-random-var.tkz}
 %\section{Arbres pondérés}
 
 \subsection{Avec des cadres}
@@ -531,8 +544,11 @@ Dans l'exemple ci-après nous utilisons la bidouille \verb+{},s sep = 1.3cm+ qui
 
 
 \begin{remark}
-	La clé \verb#pframe# est un cas particulier car tous les autres décorations se font en dehors de la définition de l'arbre
+	La clé \verb#pframe# est un cas particulier de décoration car les autres décorations se font en dehors de la définition de l'arbre
 \end{remark}
+%\begin{remark}
+%	La clé \verb#pframe# est l'un des deux cas particuliers de décoration car la majorité des décorations se font en dehors de la définition de l'arbre
+%\end{remark}
 
 
 % ---------------------- %
@@ -571,7 +587,7 @@ Voici ce qu'il faut retenir.
 
 \begin{remark}
 	Le fonctionnement interne de \verb#forest# empêche une coloration automatique des noeuds.
-	Si vous souhaitez obtenir cet effet, il faudra donc ajouter les couleurs à la main pour chaque noeud comme dans l'exemple qui suit.
+	Si vous souhaitez obtenir cet effet il faudra ajouter les couleurs à la main pour chaque noeud comme dans l'exemple qui suit.
 
 	\inputlatexex{tikz/probatree-focus-edge-color-nodes.tkz}
 \end{remark}
@@ -601,11 +617,11 @@ Avec \macro{ptreeFocus**} on obtient l'arbre ci-dessous.
 \input{tikz/probatree-focus-edge-long-star-star.tkz}
 
 
-%% ---------------------- %
-%
-%
+% ---------------------- %
+
+
 %\newparaexample{De la racine à un noeud}
-%
+
 %Comme il est très courant de vouloir indiquer un chemin de la racine à une feuille, cette fonctionnalité est proposée par le package via les macros \macro{aptreeFocusAll},  \macro{aptreeFocusAll*} et \macro{aptreeFocusAll**} qui prennent comme unique argument obligatoire le noeud final du chemin
 %\footnote{
 %	Rien n'interdit de prendre un noeud interne au lieu d'u racine même si cela ne semble pas très utile a priori.
@@ -616,6 +632,11 @@ Avec \macro{ptreeFocus**} on obtient l'arbre ci-dessous.
 
 %\inputlatexexflat{tikz/probatree-focus-edge-all.tkz}
 %\splitit{1312}
+
+
+%\begin{remark}
+%	La clé \verb#pfocus# est le 2\iem{} cas particulier de décoration avec \verb#pframe# car les autres décorations se font en dehors de la définition de l'arbre.
+%\end{remark}
 %\section{Arbres pondérés}
 
 \subsection{Utiliser les noms automatiques donnés par \texttt{forest}} \label{tnsproba-autonum-forest}
