--- a/tnsproba/tnsproba.sty
+++ b/tnsproba/tnsproba.sty
@@ -35,6 +35,7 @@
 }
 
 
+
 % -- Conditional probability -- %
 
 \newcommand\tnsproba@abstract@proba@cond[4]{%
@@ -64,11 +65,13 @@
 }
 
 
+
 % -- "Not" event -- %
 
 \newcommand\nevent[1]{%
     \overline{\kern.15ex#1\vphantom{#1^{x}}\kern.15ex}%
 }
+
 
 
 % -- Expected value - Variance - Standard deviation -- %
@@ -193,6 +196,9 @@
 				\node [draw, ##1, thick, rounded corners,fit to=tree]{};
 			}
 		},
+		%
+% USEFUL - TO KEEP 8
+%
 %		pcomment/.style={
 %		    tikz+={
 %		        \node [anchor=mid west, xshift=.4cm] at (.mid -| pcomment coord) {##1};
@@ -277,7 +283,8 @@
 \newcommand\tnsproba@ptree@focus@color{blue}
 
 
-% #1 : one node
+% #1 : number of the node
+% #2 : the node
 \newcommand\tnsproba@ptree@focus@abstract@node[2]{
 	\node[draw       = \tnsproba@ptree@focus@color,
           line width = 2pt,
@@ -287,7 +294,8 @@
 }
 
 
-% #1 : one node
+% #1 : number of the node
+% #2 : the node
 \newcommand\tnsproba@ptree@focus@abstract@node@nostart[2]{
 	\ifnum#1=1\else
     	\tnsproba@ptree@focus@abstract@node{#1}{#2}
@@ -313,8 +321,9 @@
 
 
 
-% #1 : start of the edge
-% #2 : end   of the edge
+% #1 : number of the couple of nodes
+% #2 : start of the edge
+% #3 : end   of the edge
 \newcommand\tnsproba@ptree@focus@abstract@edge[3]{
     \draw[\tnsproba@ptree@focus@color,
           line cap   = round,
@@ -411,7 +420,8 @@
 }
 
 
-% #1 : one node
+% #1 : number of the node
+% #2 : the node
 \newcommand\tnsproba@ptree@focus@auto@abstract@node@nostart[2]{
 	\ifnum#1=1\else
     	\tnsproba@ptree@focus@auto@abstract@node{#1}{#2}
@@ -437,8 +447,9 @@
 
 
 
-% #1 : start of the edge
-% #2 : end   of the edge
+% #1 : number of the couple of nodes
+% #2 : start of the edge
+% #3 : end   of the edge
 \newcommand\tnsproba@ptree@focus@auto@abstract@edge[3]{
     \draw[\tnsproba@ptree@focus@color,
           line cap   = round,
